[project]
name = "checklist-autocuidado"
version = "1.0.0"
description = "Aplicação GUI de checklist de autocuidado e hidratação para uso diário."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
autocuidado = "src.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
